GNOME Bugzilla – Bug 731698
tsdemux : latest patch for accurate seeking of h264 streams has been incorrectly merged.
Last modified: 2014-06-16 05:45:14 UTC
Reproduction: gst-validate-1.0 playbin uri=file:///home/meh/devel/some_MTS_with_h264 --set-scenario scrub_forward_seeking What should happen : progressive seeking along the file. What happens : playback stays stuck at the first picture. Caused by 0020a9344d53a5298c486817171f3aecf6c55249 (tsdemux: Remove unused variable) and the modification of the proposed patch, which actually used that variable, to account for this change. I propose reverting 0020a9344d53a5298c486817171f3aecf6c55249 and merging the patch I'll attach.
Created attachment 278503 [details] [review] fixes the reported issue
The problem comes from the fact that 'start' gets modified before being set on the segment. commit 1d1d4694889fd78534561829ac504425b63ac2ad Author: Edward Hervey <edward@collabora.com> Date: Mon Jun 16 07:42:37 2014 +0200 tsdemux: Don't overwrite original seek value In accurate mode, we'll be using start to fill in the seek segment, therefore don't overwrite it with the shifted seek position. https://bugzilla.gnome.org/show_bug.cgi?id=731698